# ci-evidence-pack

./: .gitignore  DESIGN.md  LICENSE  README.md  action.yml  pyproject.toml
.github/actions/ci-evidence-pack/: action.yml
.github/workflows/: example.yml
src/ci_evidence_pack/: __init__.py  cli.py  manifest.py  pack.py  sbom.py  util.py  verify.py
tests/: test_cli.py  test_cli_ux.py  test_integration.py
