[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-evidence-pack"
version = "0.1.0"
description = "A production-quality CI Evidence Pack generator"
authors = [{name = "OrygnsCode", email = "no-reply@github.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=10.0.0",
    "cyclonedx-bom>=3.11.0",
    "importlib_metadata>=4.0.0; python_version < '3.10'"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ci-evidence-pack = "ci_evidence_pack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
